--- a/javascript/building-blocks/events/show-video-box.html
+++ b/javascript/building-blocks/events/show-video-box.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+e<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -56,7 +56,8 @@
         videoBox.setAttribute('class','hidden');
       };
 
-      video.onclick = function() {
+      video.onclick = function(e) {
+        e.stopPropagation();
         video.play();
       };
       
